--- a/DotForge.csproj
+++ b/DotForge.csproj
@@ -1,11 +1,21 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>WinExe</OutputType>
-    <TargetFramework>net9.0-windows</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <UseWPF>true</UseWPF>
-  </PropertyGroup>
+    <PropertyGroup>
+        <OutputType>WinExe</OutputType>
+        <TargetFramework>net9.0-windows</TargetFramework>
+        <Nullable>enable</Nullable>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <UseWPF>true</UseWPF>
+    </PropertyGroup>
 
+    <!-- ビルドの高速化 -->
+    <PropertyGroup>
+        <XamlPrecompile>true</XamlPrecompile>
+        <Deterministic>true</Deterministic>
+    </PropertyGroup>
+
+    <!-- XAML変更時に自動ビルド -->
+    <ItemGroup>
+        <Watch Include="**/*.xaml" />
+    </ItemGroup>
 </Project>
