--- a/DotForge.csproj
+++ b/DotForge.csproj
@@ -18,4 +18,7 @@
     <ItemGroup>
         <Watch Include="**/*.xaml" />
     </ItemGroup>
+    <ItemGroup>
+      <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+    </ItemGroup>
 </Project>
