--- a/DotForge.csproj
+++ b/DotForge.csproj
@@ -20,6 +20,7 @@
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+        <PackageReference Include="Microsoft-WindowsAPICodePack-Shell" Version="1.1.5" />
     </ItemGroup>
 
     <!-- template ディレクトリをコンパイル対象から除外 -->
