--- a/template/Project.WPF(dotnet9)/___PROJECTNAME___.csproj
+++ b/template/Project.WPF(dotnet9)/___PROJECTNAME___.csproj
@@ -19,5 +19,6 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="[8.4.0, 9.0.0)" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="[9.0.0, 10.0.0)" />
   </ItemGroup>
 </Project>
