--- a/DotForge.csproj
+++ b/DotForge.csproj
@@ -23,6 +23,7 @@
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
         <PackageReference Include="Microsoft-WindowsAPICodePack-Shell" Version="1.1.5" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
+        <PackageReference Include="Tomlyn" Version="0.18.0" />
     </ItemGroup>
 
     <!-- template ディレクトリをコンパイル対象から除外 -->
