--- a/settings.toml
+++ b/settings.toml
@@ -1,3 +1,12 @@
-﻿
+﻿[application]
+name = "MyApp"
+version = "1.0.0"
+
+[database]
+host = "localhost"
+port = 5432
+username = "user"
+password = "password"
+
 
 
