--- a/template/MAUI/MAUI XAML App/.vscode/launch.json
+++ b/template/MAUI/MAUI XAML App/.vscode/launch.json
@@ -6,7 +6,7 @@
 			"type": "coreclr",
 			"request": "launch",
 			"preLaunchTask": "build-windows",
-			"program": "${workspaceFolder}/bin/Debug/net8.0-windows10.0.19041.0/win10-x64/___PROJECTNAME___.exe",
+			"program": "${workspaceFolder}/bin/Debug/net___DOTNET_VERSION___-windows___WINDOWS_SDK_VERSION___/win10-x64/___PROJECTNAME___.exe",
 			"args": [],
 			"cwd": "${workspaceFolder}",
 			"console": "internalConsole",
