--- a/template/Project/WPF/___PROJECTNAME___.csproj
+++ b/template/Project/WPF/___PROJECTNAME___.csproj
@@ -20,5 +20,6 @@
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="[8.4.0, 9.0.0)" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="[9.0.0, 10.0.0)" />
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="[1.1.135,)" />
   </ItemGroup>
 </Project>
