--- a/template/Project/WPF/___PROJECTNAME___.csproj
+++ b/template/Project/WPF/___PROJECTNAME___.csproj
@@ -6,6 +6,11 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
+    <!-- 各種バージョン情報の指定 -->
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
+    <InformationalVersion>1.0.0</InformationalVersion>        
+    <Version>1.0.0</Version>
   </PropertyGroup>
   <!-- ビルドの高速化 -->
   <PropertyGroup>
@@ -18,8 +23,8 @@
     <Watch Include="**/*.xaml" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="CommunityToolkit.Mvvm" Version="[8.4.0, 9.0.0)" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="[9.0.0, 10.0.0)" />
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="[8.4.0,)" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="[9.0.0,)" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="[1.1.135,)" />
   </ItemGroup>
 </Project>
